# Netflix

./: README.md  docker-compose.yml
NetflixAndroid/: local.properties
backend/: .gitignore  Dockerfile.js  docker-compose.yml  package.json
backend/src/: app.js
backend/src/controllers/: adminController.js  auth.js  category.js  moviesController.js  tokenController.js  userController.js
backend/src/cpp/: CMakeLists.txt  Dockerfile.cpp  GenerateMovieRecommendation.cpp  GenerateMovieRecommendation.hpp  Recommend.cpp  Recommend.hpp  RelevanceCalculator.cpp  RelevanceCalculator.hpp  SimilarityCalculator.cpp  SimilarityCalculator.hpp  ThreadPool.cpp  ThreadPool.hpp  movie_DB.cpp  movie_DB.h  post.cpp  post.h  tcp_s.cpp  tcp_server
backend/src/data/: movieDB.txt
backend/src/middlewares/: auth.js  validateID.js
backend/src/models/: User.js  category.js  mappingMovies.js  mappingUsers.js  movie.js
backend/src/python/: Dockerfile.py  tcp_c.py
backend/src/routes/: admin.js  auth.js  category.js  movies.js
backend/src/services/: category.js
backend/src/utils/: populateMappings.js  responseHandler.js  updateExistingData.js
my-new-app/: .gitignore  Dockerfile  package-lock.json  package.json
my-new-app/public/: index.html
my-new-app/src/: App.css  App.js
my-new-app/src/components/: AdminManagement.js  Home.js  Login.js  MainScreen.js  MovieInfo.js  MoviePlayer.js  RandomMovie.js  Register.js  TopMenu.js
my-new-app/src/contexts/: AuthContext.js
my-new-app/src/styles/: AdminManagement.css
wiki/: execution.md  login&register.md
(+5 files in other folders)
